-
Bug
-
Resolution: Done
-
P2: Important
-
5.6, 5.7
-
None
-
b305702d1e38d72765325dd7b1f2a7fde14e5529
The GBM hardware cursor implementation has some multi-screen support. The normal OpenGL one does not. Problem is, we still want the normal one to function sensibly when multiple screens are connected (for instance when using the DRM+EGLDevice backend which lacks a hw cursor atm).
- relates to
-
QTBUG-54151 Support for multiple touchscreens using eglfs
-
- Closed
-
| For Gerrit Dashboard: QTBUG-55161 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 167320,2 | eglfs: Enable virtual desktop with EGLDevice as well | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 167322,3 | eglfs: Support virtual desktops in the OpenGL cursor | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 167332,13 | embedded: Update docs with DRM multi-screen improvements | dev | qt/qtdoc | Status: MERGED | -2 | 0 |
| 299817,2 | eglfs: Send proper enter/leave events when multiple screens are in use | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 301004,2 | eglfs: Send proper enter/leave events when multiple screens are in use | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |