src/plugins/platforms/eglfs/deviceintegration/eglfs_kms_egldevice/qeglfskmsegldevice.h
@@ -42,6 +42,10 @@
 
 #include <qeglfskmsdevice.h>
 
+QT_BEGIN_NAMESPACE
+
+class QPlatformCursor;
+
 class QEglFSKmsEglDevice: public QEglFSKmsDevice
 {
 public:
@@ -56,6 +60,14 @@ public:
                                           QEglFSKmsDevice *device,
                                           QEglFSKmsOutput output,
                                           QPoint position) Q_DECL_OVERRIDE;
+
+    QPlatformCursor *globalCursor() { return m_globalCursor; }
+    void destroyGlobalCursor();
+
+private:
+    QPlatformCursor *m_globalCursor;
 };
+
+QT_END_NAMESPACE
 
 #endif // QEGLFSKMSEGLDEVICE_H
